--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -7,9 +7,9 @@
 }
 
 .navbar-container {
-  @apply flex items-center justify-between text-white relative transition-all ease-in-out duration-300;
+  @apply flex items-center justify-between text-black relative transition-all ease-in-out duration-300;
 }
 
 .navbar-menu {
-  @apply flex flex-col text-end font-semibold absolute right-2 top-14 bg-indigo-200 rounded-lg p-4 gap-2;
+  @apply flex flex-col text-end font-semibold [text-shadow:_0_1px_5px_rgb(0_0_0_/_10%)] text-xl shadow-md absolute right-2 top-14 bg-pink-100 rounded-lg p-4 gap-2 [font-family:_"Freeman"];
 }
