trying to make it autoplay

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,9 @@
 .navbar-wrapper {
-  @apply w-screen items-center bg-transparent p-3 fixed top-0 left-0 right-0 z-50 transition-all ease-in-out duration-300;
+  @apply w-screen items-center bg-transparent p-5 fixed top-0 left-0 right-0 z-50 transition-all ease-in-out duration-300;
 }
 
 .navbar-scroll {
-  @apply bg-blue-950;
+  @apply bg-blue-950 text-white;
 }
 
 .navbar-container {
@@ -11,5 +11,9 @@
 }
 
 .navbar-menu {
-  @apply flex flex-col text-end font-semibold [text-shadow:_0_1px_5px_rgb(0_0_0_/_10%)] text-xl shadow-md absolute right-2 top-14 bg-pink-100 rounded-lg p-4 gap-2 [font-family:_"Freeman"];
+  @apply flex flex-col text-end font-semibold [text-shadow:_0_1px_5px_rgb(0_0_0_/_10%)] text-xl shadow-md absolute right-2 top-14 bg-pink-100 rounded-lg p-4 gap-2 [font-family:_"Freeman"] lg:bg-transparent lg:shadow-none lg:flex-row lg:top-0 lg:right-0 lg:p-0;
+}
+
+.navbar-mobile-button {
+  @apply lg:hidden;
 }
