--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,5 +1,5 @@
 .navbar-wrapper {
-  @apply w-screen items-center bg-transparent p-5 fixed top-0 left-0 right-0 z-50 transition-all ease-in-out duration-300;
+  @apply w-screen items-center bg-transparent p-5 fixed top-0 left-0 right-0 z-50 transition-all ease-in-out duration-300 text-black;
 }
 
 .navbar-scroll {
@@ -7,7 +7,7 @@
 }
 
 .navbar-container {
-  @apply flex items-center justify-between text-black relative transition-all ease-in-out duration-300;
+  @apply flex items-center justify-between relative transition-all ease-in-out duration-300;
 }
 
 .navbar-menu {
