--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -1,9 +1,9 @@
 .navbar-wrapper {
-  @apply w-screen items-center bg-transparent p-5 fixed top-0 left-0 right-0 z-50 transition-all ease-in-out duration-300 text-black;
+  @apply w-screen items-center bg-transparent p-5 fixed top-0 left-0 right-0 z-50 transition-[background] ease-in-out duration-300 text-black;
 }
 
 .navbar-scroll {
-  @apply bg-blue-950 text-white;
+  @apply bg-[#abc99f] text-white;
 }
 
 .navbar-container {
