--- a/src/components/AllEatsList/AllEatsList.css
+++ b/src/components/AllEatsList/AllEatsList.css
@@ -1,4 +1,8 @@
-.all-eats-container {
+.eats-wrapper {
+  @apply flex flex-col gap-5;
+}
+
+.options-container {
   @apply grid grid-cols-1 gap-10;
 }
 
